fix: don't allow text to overflow comment box

--- a/src/components/Comment.scss
+++ b/src/components/Comment.scss
@@ -78,6 +78,7 @@
   &__content {
     color: var(--clr-grey-600);
     grid-column: -1 / 1;
+    word-wrap: break-word;
   }
 
   &__mention {
